# Enterprise_Agents

./: .gitignore  LICENSE  README.md  api.py  chunking.py  generation.py  main.py  pyproject.toml  rag_service.py  retrieval.py
data/demo_policies/: policy-001.txt  policy-002.txt  policy-003.txt  policy-004.txt  policy-005.txt  policy-006.txt  policy-007.txt  policy-008.txt  policy-009.txt  policy-010.txt  policy-011.txt  policy-012.txt  policy-013.txt  policy-014.txt  policy-015.txt  policy-016.txt  policy-017.txt  policy-018.txt  policy-019.txt  policy-020.txt  policy-021.txt  policy-022.txt  policy-023.txt  policy-024.txt  policy-025.txt  policy-026.txt  policy-027.txt  policy-028.txt  policy-029.txt  policy-030.txt  policy-031.txt  policy-032.txt  policy-033.txt  policy-034.txt  policy-035.txt  policy-036.txt  policy-037.txt  policy-038.txt  policy-039.txt  policy-040.txt  (+20 more)
data/policies/: leave_policy.txt
evaluation/: eval_questions.csv  eval_results.csv
frontend/: app.py
scripts/: generate_demo_policies.py
src/enterprise_agents/: api.py  chunking.py  evaluation.py  generation.py  guardrails.py  ingestion.py  python_check.ipynb  rag_service.py  retrieval.py
