[project]
name = "enterprise-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
