[project]
name = "enterprise-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
